--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.5.0"
+    "@mui/material": "^5.5.0",
+    "file-saver": "^2.0.5",
+    "react-icons-kit": "^2.0.0",
+    "sqlite3": "^5.0.2"
   }
 }
